fix(ui): misaligned overlay (#127)

--- a/packages/ui/src/components/viewport/Viewport.module.scss
+++ b/packages/ui/src/components/viewport/Viewport.module.scss
@@ -29,6 +29,10 @@
   outline: 1px solid var(--surface-color);
 }
 
+.preview {
+  display: block;
+}
+
 .overlay {
   position: absolute;
   top: 0;
